--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -267,6 +267,7 @@
                     <br />
                 </div>
                 <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/lectures/lect03-function-RV.pdf">lect03-function-RV</a>]
               </div>
             </li>
 
