computer assignment 1 added

--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -286,6 +286,21 @@
                 </div>
             </li>	
 
+            <li class="table-row table-row-due">
+                <div class="col col-1" data-label="Event">Computer Assignment</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-03-10
+                    <br class="date-spliter"/>Friday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Computer Assignment1
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/computer-assignment/CA1.pdf">CA1</a>]
+                </div>
+            </li>
+
 			<!--
               <li class="table-row table-row-assignment">
                   <div class="col col-1" data-label="Event">Class Assignment</div>
