--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -91,6 +91,11 @@
 <!--        </li>-->
 
         <li class="no-p-margin">
+          2023-03-10: Computer assignment 1 was released. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
+            <p></p>
+        </li>
+
+        <li class="no-p-margin">
           2023-03-07: Homework 2 was released. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
             <p></p>
         </li>
