--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -192,17 +192,16 @@
                     [<a href="/pecs2023/static_files/lectures/lect02-RV2.pdf">lect02-RV2</a>]
               </div>
             </li>
-
-            
-
+        
             <li class="table-row table-row-assignment">
                 <div class="col col-1" data-label="Event">Homework</div>
                 <div class="col col-1-2" data-label="Date">
-                    2023-02-25
+                    2023-02-21
                     <br class="date-spliter"/>Saturday
                 </div>
                 <div class="col col-2" data-label="Description">
-                    Homework 1
+                    Homework 1</br>
+					DD: 2023-03-07
                     <br />
                 </div>
                 <div class="col col-4" data-label="Course Material">
@@ -278,7 +277,8 @@
                     <br class="date-spliter"/>Tuesday
                 </div>
                 <div class="col col-2" data-label="Description">
-                    Homework 2
+                    Homework 2</br>
+					DD: 2023-03-17
                     <br />
                 </div>
                 <div class="col col-4" data-label="Course Material">
@@ -299,6 +299,36 @@
                 <div class="col col-4" data-label="Course Material">
                     [<a href="/pecs2023/static_files/computer-assignment/CA1.pdf">CA1</a>]
                 </div>
+            </li>
+			
+            <li class="table-row table-row-lecture">
+                <div class="col col-1" data-label="Event">Lecture4</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-03-12
+                    <br class="date-spliter"/>Sunday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Laplace and Z Transforms
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/lectures/lect04-Z-laplace.pdf">lect04-Z-laplace</a>]
+              </div>
+            </li>
+
+			            <li class="table-row table-row-lecture">
+                <div class="col col-1" data-label="Event">Lecture4</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-03-14
+                    <br class="date-spliter"/>Tuesday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Laplace and Z Transforms
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/lectures/lect04-Z-laplace.pdf">lect04-Z-laplace</a>]
+              </div>
             </li>
 
 			<!--
