--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -91,27 +91,27 @@
 <!--        </li>-->
 
         <li class="no-p-margin">
-          2023-03-10: Computer assignment 1 was released. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
+          2023-03-10: Computer assignment 1 was released. Check [<a href="/pecs2023/assignments/" target="_blank">ASSIGNMENTS</a>].
             <p></p>
         </li>
 
         <li class="no-p-margin">
-          2023-03-07: Homework 2 was released. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
+          2023-03-07: Homework 2 was released. Check [<a href="/pecs2023/assignments/" target="_blank">ASSIGNMENTS</a>].
             <p></p>
         </li>
 
         <li class="no-p-margin">
-          2023-02-26: A Quiz on Sunday, March 5 will be held. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
+          2023-02-26: A Quiz on Sunday, March 5 will be held.
             <p></p>
         </li>
 
         <li class="no-p-margin">
-          2023-02-25: Homework 1 was released. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
+          2023-02-25: Homework 1 was released. Check [<a href="/pecs2023/assignments/" target="_blank">ASSIGNMENTS</a>].
             <p></p>
         </li>
 
         <li class="no-p-margin">
-          2023-02-20: A Quiz on Sunday, February 26 will be held. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
+          2023-02-20: A Quiz on Sunday, February 26 will be held.
             <p></p>
         </li>
 
@@ -126,12 +126,7 @@
         </li>
 
         <li class="no-p-margin">
-          2023-02-06: The second session on Tuesday, February 7 will be held. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
-            <p></p>
-        </li>
-
-        <li class="no-p-margin">
-          2023-02-04: The first session on Sunday, February 5 will be held. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
+          2023-02-04: The first session on Sunday, February 5 will be held.
             <p></p>
         </li>
 
