update lectures and announcement

--- a/pecs2023/final_project/index.html
+++ b/pecs2023/final_project/index.html
@@ -101,9 +101,9 @@
 
             <h1>Important Dates</h1>
 
-            <!--  <ul>-->
-            <!--    <li style='font-weight: bold'>DEADLINE</li>-->
-            <!--  </ul>-->
+            <ul>
+            <li style='font-weight: bold'>DEADLINE: 2023/05/21</li>
+            </ul>
 
           </div>
         </article>
@@ -121,7 +121,7 @@
           </span>
           <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif; float:right">
             <a title="Download homework (zip)" href="/pecs2023/static_files/projects/Final Project.pdf">
-              <i class="fas fa-file-archive"></i>
+              <i class="fas fa-file-pdf"></i>
             </a>
           </strong>
         </li>
