--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -116,7 +116,7 @@
             </li>
 
             <li class="no-p-margin">
-              2023-03-20: First computer assignment deadline was extended. Check [<a href="https://elearn.ut.ac.ir/"
+              2023-03-20: First computer assignment deadline was extended due to Nowruz. Check [<a href="https://elearn.ut.ac.ir/"
               target="_blank">ELEARN</a>].
               <p></p>
             </li>
