--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -365,6 +365,11 @@
                             [<a href="/pecs2023/static_files/lectures/lect05-1-discrete.pdf">lect05-1-discrete</a>]
                         </div>
                     </li>
+
+                    <li class="table-row table-row-due">
+                        <div class="" data-label="Event">Nowruz Holidays</div>
+
+                    </li>
                     
 
 
@@ -464,7 +469,7 @@
                             <br class="date-spliter" />Tuesday
                         </div>
                         <div class="col col-2" data-label="Description">
-                            Gaussian 10april
+                            Gaussian
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
@@ -715,7 +720,7 @@
                             <br class="date-spliter" />Sunday
                         </div>
                         <div class="col col-2" data-label="Description">
-                            BD
+                            Birth Death Process
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
@@ -730,7 +735,7 @@
                             <br class="date-spliter" />Tuesday
                         </div>
                         <div class="col col-2" data-label="Description">
-                            mm1
+                            MM1
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
