--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -107,7 +107,45 @@
             <!--        </li>-->
 
 
-           
+            <li class="no-p-margin">
+              2023-04-19: Computer assignment 3 was released. Check [<a href="/pecs2023/assignments/"
+              target="_blank">ASSIGNMENTS</a>].
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-04-19: Homework 3 was released. Check [<a href="/pecs2023/assignments/"
+              target="_blank">ASSIGNMENTS</a>].
+              <p></p>
+            </li>
+
+
+            <li class="no-p-margin">
+              2023-04-14: A Quiz on Sunday, April 30 will be held. 
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-04-13: Second computer assignment deadline was extended . Check [<a href="/pecs2023/assignments/"
+              target="_blank">ASSIGNMENTS</a>].
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-04-11: A Quiz on Sunday, April 16 will be held. 
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-04-04: Computer assignment 2 was released. Check [<a href="/pecs2023/assignments/"
+              target="_blank">ASSIGNMENTS</a>].
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-04-03: A Quiz on Sunday, April 9 will be held. 
+              <p></p>
+            </li>
 
             <li class="no-p-margin">
               2023-03-21: Final project was released. Check [<a href="http://127.0.0.1:4000/pecs2023/final_project/"
