--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -126,8 +126,14 @@
             </li>
 
             <li class="no-p-margin">
-              2023-04-13: Second computer assignment deadline was extended . Check [<a href="/pecs2023/assignments/"
-              target="_blank">ASSIGNMENTS</a>].
+              2023-04-13: Second computer assignment deadline was extended. Check [<a href="https://elearn.ut.ac.ir/"
+              target="_blank">ELEARN</a>].
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-04-11: Bonus assignment 2 was released. Check [<a href="https://elearn.ut.ac.ir/"
+              target="_blank">ELEARN</a>].
               <p></p>
             </li>
 
