new lecture added

--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -496,7 +496,12 @@
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
-                            
+                            [<a href="/pecs2023/static_files/lectures/joint distribution example.pdf">joint distribution example</a>]
+                            <br>
+                            [<a href="/pecs2023/static_files/lectures/random vectors-notes.pdf">random vector notes</a>]
+                            <br>
+                            [<a href="/pecs2023/static_files/lectures/bivariate normal distribution.pdf">bivariate normal distribution</a>]
+                            <br>
                         </div>
                     </li>
 
