--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -106,6 +106,28 @@
             <!--            -->
             <!--        </li>-->
 
+            <li class="no-p-margin">
+              2023-05-01: A Quiz on Sunday, May 7 will be held. 
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-05-01: The homework 3 deadline was extended. Check [<a href="https://elearn.ut.ac.ir/"
+              target="_blank">ELEARN</a>].
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-05-01: Third computer assignment deadline was extended. Check [<a href="https://elearn.ut.ac.ir/"
+              target="_blank">ELEARN</a>].
+              <p></p>
+            </li>
+            
+            <li class="no-p-margin">
+              2023-04-25: Notes about Quiz5 are provided in elearn. Check [<a href="https://elearn.ut.ac.ir/"
+              target="_blank">ELEARN</a>].
+              <p></p>
+            </li>
 
             <li class="no-p-margin">
               2023-04-19: Computer assignment 3 was released. Check [<a href="/pecs2023/assignments/"
