--- a/alumni/index.html
+++ b/alumni/index.html
@@ -214,7 +214,17 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/default.png" class="image--cover">
                     <p>Reza Ramshini</p>
-                </div>			
+                </div>
+
+				<div class="image--cover-container">
+						<img src="/images/alumni/vahid_sohrabi.jpg" class="image--cover">
+                    <p>Vahid Sohrabi</p>
+                </div>	
+
+				<div class="image--cover-container">
+						<img src="/images/alumni/mh.png" class="image--cover">
+                    <p>Mehrdad Hooshangi Naghani</p>
+                </div>				
 
             </div>		
         </div>		
