--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -366,7 +366,7 @@
                         </div>
                     </li>
 
-                    <li class="table-row table-row-due">
+                    <li class="table-row table-row-due" style="background-color: rgb(140, 140, 140);">
                         <div class="" data-label="Event">Nowruz Holidays</div>
 
                     </li>
@@ -386,6 +386,21 @@
                         </div>
                         <div class="col col-4" data-label="Course Material">
                             [<a href="/pecs2023/static_files/lectures/L8-discrete dist binomial-II.pdf">Discrete Dist Binomial-II</a>]
+                        </div>
+                    </li>
+                    
+                    <li class="table-row table-row-due">
+                        <div class="col col-1" data-label="Event">Computer Assignment</div>
+                        <div class="col col-1-2" data-label="Date">
+                            2023-04-04
+                            <br class="date-spliter" />Tuesday
+                        </div>
+                        <div class="col col-2" data-label="Description">
+                            Computer Assignment2
+                            <br />
+                        </div>
+                        <div class="col col-4" data-label="Course Material">
+                            [<a href="/pecs2023/static_files/computer-assignment/CA2.pdf">CA2</a>]
                         </div>
                     </li>
 
@@ -415,6 +430,7 @@
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
+                            [<a href="/pecs2023/static_files/quiz/Q3.pdf">Quiz3</a>]
                         </div>
                     </li>
 
@@ -463,6 +479,7 @@
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
+                            [<a href="/pecs2023/static_files/quiz/Q4.pdf">Quiz4</a>]
                         </div>
                     </li>
 
@@ -482,6 +499,38 @@
                             [<a href="/pecs2023/static_files/lectures/bivariate normal distribution.pdf">Bivariate Normal Distribution</a>]
                             <br/>
                             [<a href="/pecs2023/static_files/lectures/joint distribution example.pdf">Joint Distribution Example</a>]
+                        </div>
+                    </li>
+
+                    
+                    <li class="table-row table-row-assignment">
+                        <div class="col col-1" data-label="Event">Homework</div>
+                        <div class="col col-1-2" data-label="Date">
+                            2023-04-19
+                            <br class="date-spliter" />Wednesday
+                        </div>
+                        <div class="col col-2" data-label="Description">
+                            Homework 3</br>
+                            DD: 2023-04-28
+                            <br />
+                        </div>
+                        <div class="col col-4" data-label="Course Material">
+                            [<a href="/pecs2023/static_files/homework/HW3.pdf">HW3</a>]
+                        </div>
+                    </li>
+
+                    <li class="table-row table-row-due">
+                        <div class="col col-1" data-label="Event">Computer Assignment</div>
+                        <div class="col col-1-2" data-label="Date">
+                            2023-04-19
+                            <br class="date-spliter" />Wednesday
+                        </div>
+                        <div class="col col-2" data-label="Description">
+                            Computer Assignment3
+                            <br />
+                        </div>
+                        <div class="col col-4" data-label="Course Material">
+                            [<a href="/pecs2023/static_files/computer-assignment/CA3.pdf">CA3</a>]
                         </div>
                     </li>
 
@@ -539,6 +588,7 @@
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
+                            [<a href="/pecs2023/static_files/quiz/Q5.pdf">Quiz5</a>]
                         </div>
                     </li>
 
@@ -584,6 +634,7 @@
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
+                            [<a href="/pecs2023/static_files/quiz/Q6.pdf">Quiz6</a>]
                         </div>
                     </li>
 
