--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -107,6 +107,24 @@
             <!--        </li>-->
 
             <li class="no-p-margin">
+              2023-05-12: Computer assignment 4 was released. Check [<a href="/pecs2023/assignments/"
+              target="_blank">ASSIGNMENTS</a>].
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-05-12: Homework 4 was released. Check [<a href="/pecs2023/assignments/"
+              target="_blank">ASSIGNMENTS</a>].
+              <p></p>
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-05-09: A Quiz on Sunday, May 14 will be held. 
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
               2023-05-01: A Quiz on Sunday, May 7 will be held. 
               <p></p>
             </li>
