--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -107,6 +107,17 @@
             <!--        </li>-->
 
             <li class="no-p-margin">
+              2023-05-16: The Final project's deadline was extended. Check [<a href="https://elearn.ut.ac.ir/"
+              target="_blank">ELEARN</a>].
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
+              2023-05-14: A Quiz on Sunday, May 28 will be held. 
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
               2023-05-12: Computer assignment 4 was released. Check [<a href="/pecs2023/assignments/"
               target="_blank">ASSIGNMENTS</a>].
               <p></p>
