--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -107,6 +107,12 @@
             <!--        </li>-->
 
             <li class="no-p-margin">
+              2023-05-23: The time of Quiz 8 has been changed to Tuesday, June 6. Check [<a href="https://elearn.ut.ac.ir/"
+              target="_blank">ELEARN</a>].
+              <p></p>
+            </li>
+
+            <li class="no-p-margin">
               2023-05-16: The Final project's deadline was extended. Check [<a href="https://elearn.ut.ac.ir/"
               target="_blank">ELEARN</a>].
               <p></p>
