--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -706,6 +706,22 @@
                             <br class="date-spliter" />Tuesday
                         </div>
                         <div class="col col-2" data-label="Description">
+                            DTMC
+                            <br />
+                        </div>
+                        <div class="col col-4" data-label="Course Material">
+                            [<a href="/pecs2023/static_files/lectures/lect07-0-DTMC.pdf">DTMC</a>]
+                        </div>
+                    </li>
+
+
+                    <li class="table-row table-row-lecture">
+                        <div class="col col-1" data-label="Event">Lecture18</div>
+                        <div class="col col-1-2" data-label="Date">
+                            2023-05-28
+                            <br class="date-spliter" />Sunday
+                        </div>
+                        <div class="col col-2" data-label="Description">
                             CTMC
                             <br />
                         </div>
@@ -715,10 +731,10 @@
                     </li>
 
                     <li class="table-row table-row-lecture">
-                        <div class="col col-1" data-label="Event">Lecture18</div>
+                        <div class="col col-1" data-label="Event">Lecture20</div>
                         <div class="col col-1-2" data-label="Date">
-                            2023-05-28
-                            <br class="date-spliter" />Sunday
+                            2023-05-30
+                            <br class="date-spliter" />Tuesday
                         </div>
                         <div class="col col-2" data-label="Description">
                             System Analysis I + II
@@ -729,24 +745,12 @@
                         </div>
                     </li>
 
-                    <li class="table-row table-row-quiz">
-                        <div class="col col-1" data-label="Event">Quiz</div>
-                        <div class="col col-1-2" data-label="Date">
-                            2023-05-28
-                            <br class="date-spliter" />Sunday
-                        </div>
-                        <div class="col col-2" data-label="Description">
-                            Quiz 8
-                            <br />
-                        </div>
-                        <div class="col col-4" data-label="Course Material">
-                        </div>
-                    </li>
+                   
 
                     <li class="table-row table-row-lecture">
-                        <div class="col col-1" data-label="Event">Lecture18</div>
+                        <div class="col col-1" data-label="Event">Lecture20</div>
                         <div class="col col-1-2" data-label="Date">
-                            2023-05-30
+                            2023-06-06
                             <br class="date-spliter" />Tuesday
                         </div>
                         <div class="col col-2" data-label="Description">
@@ -759,10 +763,10 @@
                     </li>
 
                     <li class="table-row table-row-lecture">
-                        <div class="col col-1" data-label="Event">Lecture20</div>
+                        <div class="col col-1" data-label="Event">Lecture21</div>
                         <div class="col col-1-2" data-label="Date">
-                            2023-06-06
-                            <br class="date-spliter" />Tuesday
+                            2023-06-11
+                            <br class="date-spliter" />Sunday
                         </div>
                         <div class="col col-2" data-label="Description">
                             Queueing Systems
@@ -773,11 +777,25 @@
                         </div>
                     </li>
 
-                    <li class="table-row table-row-lecture">
-                        <div class="col col-1" data-label="Event">Lecture21</div>
+                    <li class="table-row table-row-quiz">
+                        <div class="col col-1" data-label="Event">Quiz</div>
                         <div class="col col-1-2" data-label="Date">
-                            2023-06-11
-                            <br class="date-spliter" />Sunday
+                            2023-06-06
+                            <br class="date-spliter" />Tuesday
+                        </div>
+                        <div class="col col-2" data-label="Description">
+                            Quiz 8
+                            <br />
+                        </div>
+                        <div class="col col-4" data-label="Course Material">
+                        </div>
+                    </li>
+
+                    <li class="table-row table-row-lecture">
+                        <div class="col col-1" data-label="Event">Lecture22</div>
+                        <div class="col col-1-2" data-label="Date">
+                            2023-06-13
+                            <br class="date-spliter" />Tuesday
                         </div>
                         <div class="col col-2" data-label="Description">
                             Birth Death Process
@@ -791,10 +809,10 @@
                     				
 
                     <li class="table-row table-row-lecture">
-                        <div class="col col-1" data-label="Event">Lecture22</div>
+                        <div class="col col-1" data-label="Event">Lecture23</div>
                         <div class="col col-1-2" data-label="Date">
-                            2023-06-13
-                            <br class="date-spliter" />Tuesday
+                            2023-06-18
+                            <br class="date-spliter" />Sunday
                         </div>
                         <div class="col col-2" data-label="Description">
                             MM1 + MG1
