some edit schedule

--- a/pecs2023/final_project/index.html
+++ b/pecs2023/final_project/index.html
@@ -102,7 +102,7 @@
             <h1>Important Dates</h1>
 
             <ul>
-            <li style='font-weight: bold'><del>OLD DEADLINE: 2023/05/21</del></li>
+            <li style='font-weight: bold'><del>DEADLINE: 2023/05/21</del></li>
             <li style='font-weight: bold'>NEW DEADLINE: 2023/06/10</li>
 
             </ul>
