--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -671,6 +671,7 @@
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
+                            [<a href="/pecs2023/static_files/quiz/Q7.pdf">Quiz7</a>]
                         </div>
                     </li>
 
@@ -765,20 +766,6 @@
                         </div>
                     </li>
 					
-					<li class="table-row table-row-quiz">
-                        <div class="col col-1" data-label="Event">Quiz</div>
-                        <div class="col col-1-2" data-label="Date">
-                            2023-06-06
-                            <br class="date-spliter" />Tuesday
-                        </div>
-                        <div class="col col-2" data-label="Description">
-                            Quiz 8
-                            <br />
-                        </div>
-                        <div class="col col-4" data-label="Course Material">
-                        </div>
-                    </li>
-
                     <li class="table-row table-row-lecture">
                         <div class="col col-1" data-label="Event">Lecture21</div>
                         <div class="col col-1-2" data-label="Date">
@@ -793,6 +780,20 @@
                             [<a href="/pecs2023/static_files/lectures/lect-10 queueing systems.pdf">Queueing Systems</a>]	
                         </div>
                     </li>
+					
+					<li class="table-row table-row-quiz">
+                        <div class="col col-1" data-label="Event">Quiz</div>
+                        <div class="col col-1-2" data-label="Date">
+                            2023-06-11
+                            <br class="date-spliter" />Tuesday
+                        </div>
+                        <div class="col col-2" data-label="Description">
+                            Quiz 8
+                            <br />
+                        </div>
+                        <div class="col col-4" data-label="Course Material">
+                        </div>
+                    </li>					
 
                     <li class="table-row table-row-lecture">
                         <div class="col col-1" data-label="Event">Lecture22</div>
