add little law lecture

--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -762,7 +762,9 @@
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
-                            [<a href="/pecs2023/static_files/lectures/littlelaw.pdf">Little Law</a>]	
+                            [<a href="/pecs2023/static_files/lectures/lect-09-1 little-summary.pdf">Little Law</a>]	
+							<br>
+							[<a href="/pecs2023/static_files/lectures/Derivation of Little’s Law.pdf">Derivation of Little’s Law</a>]	
                         </div>
                     </li>
 					
