update DTMC Lecture

--- a/pecs2023/lectures/index.html
+++ b/pecs2023/lectures/index.html
@@ -402,8 +402,11 @@
                                     <strong>#11</strong> Lecture7-0
                                     <br />
                                     <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
-                                        [<a title="Download slides (pdf)"
-                                            href="/pecs2023/static_files/lectures/lect07-0-DTMC.pdf">PDF</a>]
+										[<a title="Download slides (pdf)"
+                                            href="/pecs2023/static_files/lectures/lect07-0 DTMC-summary.pdf">PDF1</a>,
+                                        <a title="Download slides (pdf)"
+                                            href="/pecs2023/static_files/lectures/lect07-0 DTMC II.pdf">PDF2
+                                        </a>]
                                         [<a title="Download file (zip)" href="#">Jupyter Notebook</a>]
                                     </strong>
                                 </div>
