--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -701,7 +701,9 @@
                             <br />
                         </div>
                         <div class="col col-4" data-label="Course Material">
-                            [<a href="/pecs2023/static_files/lectures/lect07-0-DTMC.pdf">DTMC</a>]
+                            [<a href="/pecs2023/static_files/lectures/lect07-0 DTMC-summary.pdf">DTMC Summary</a>]
+							<br>
+							[<a href="/pecs2023/static_files/lectures/lect07-0 DTMC II.pdf">DTMC II</a>]	
                         </div>
                     </li>
 
