--- a/alumni/index.html
+++ b/alumni/index.html
@@ -151,7 +151,17 @@
 						<img src="/images/alumni/mahdi_dolati.jpg" class="image--cover">
                     <p>Mahdi Dolati</p>
 					</a>
-                </div>								 
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/ag.jpg" class="image--cover">
+                    <p>Abdollah Ghaffari Sheshjavani</p>
+                </div>
+				
+                <div class="image--cover-container">
+						<img src="/images/alumni/kamyar_givaki.jpg" class="image--cover">
+                    <p>Kamyar Givaki</p>
+                </div>					
 
             </div>
         </div>
@@ -225,6 +235,11 @@
 						<img src="/images/alumni/mh.png" class="image--cover">
                     <p>Mehrdad Hooshangi Naghani</p>
                 </div>				
+				
+                <div class="image--cover-container">
+						<img src="/images/alumni/ali_sharifi.jpg" class="image--cover">
+                    <p>Ali Sharifi</p>
+                </div>						
 
             </div>		
         </div>		
