--- a/useful-links/index.html
+++ b/useful-links/index.html
@@ -64,6 +64,7 @@
     <li><a class="page-link" href="/courses/"><i class="fas fa-book-open"></i> Courses</a></li>					
     <li><a class="page-link" href="/useful-reads/"><i class="fas fa-glasses"></i> Useful reads</a></li>
     <li><a class="page-link" href="/useful-links/"><i class="fas fa-globe"></i> Useful links</a></li>
+    <li><a class="page-link" href="https://github.com/UT-Network-Lab" target="_blank"><i class="fab fa-github"></i> Github</a></li>
 			
 </ul>
 
@@ -210,11 +211,6 @@
     <a href="https://hpnl.ir" target="_blank">
       <i class="fas fa-globe" style="color:gray"></i> hpnl.ir</a>
 	</li> 
-  
-	<li>
-    <a href="https://github.com/UT-Network-Lab" target="_blank">
-      <i class="fab fa-github" style="color:gray"></i> github.com/UT-Network-Lab</a>
-	</li>  
    
         </ul>
       </div>
