--- a/books/index.html
+++ b/books/index.html
@@ -64,8 +64,8 @@
     <li><a class="page-link" href="/courses/"><i class="fas fa-book-open"></i> Courses</a></li>					
     <li><a class="page-link" href="/useful-reads/"><i class="fas fa-glasses"></i> Useful reads</a></li>
     <li><a class="page-link" href="/useful-links/"><i class="fas fa-globe"></i> Useful links</a></li>
-    <li><a class="page-link" href="https://github.com/UT-Network-Lab" target="_blank"><i class="fab fa-github"></i> Github</a></li>
-			
+    <li><a class="page-link" href="https://github.com/hpnl" target="_blank"><i class="fab fa-github"></i> Github</a></li>
+	
 </ul>
 
      </div>  
