--- a/people/mahdi-dolati.html
+++ b/people/mahdi-dolati.html
@@ -64,6 +64,7 @@
     <li><a class="page-link" href="/courses/"><i class="fas fa-book-open"></i> Courses</a></li>					
     <li><a class="page-link" href="/useful-reads/"><i class="fas fa-glasses"></i> Useful reads</a></li>
     <li><a class="page-link" href="/useful-links/"><i class="fas fa-globe"></i> Useful links</a></li>
+    <li><a class="page-link" href="https://github.com/hpnl" target="_blank"><i class="fab fa-github"></i> Github</a></li>	
 			
 </ul>
 
