edit header and footer

--- a/books/index.html
+++ b/books/index.html
@@ -65,7 +65,7 @@
     <li><a class="page-link" href="/useful-reads/"><i class="fas fa-glasses"></i> Useful reads</a></li>
     <li><a class="page-link" href="/useful-links/"><i class="fas fa-globe"></i> Useful links</a></li>
     <li><a class="page-link" href="https://github.com/hpnl" target="_blank"><i class="fab fa-github"></i> Github</a></li>
-	
+				
 </ul>
 
      </div>  
@@ -95,7 +95,9 @@
 
 <h2 id="book">Title (Persian): استنباط آماری: پیش‌درآمدی بر علوم داده و یادگیری ماشین ۱</h2>
 
-<b>Publisher:</b><p><a href="http://shahed.ac.ir/po/EN/Lists/Introduction/AllItems.aspx" target="_blank"> The Publishing Office Center of Shahed University</a></p>
+<b>Publisher:</b>
+
+<p>The Publishing Office Center of Shahed University</p>
 
 <b>Print publication year:</b><p> 2021</p>
 
@@ -109,7 +111,7 @@
       </div>
     </div>
 
-     <footer class="site-footer">
+	 <footer class="site-footer">
 
   <div class="wrapper">
 
