--- a/qip2023/projects/index.html
+++ b/qip2023/projects/index.html
@@ -35,7 +35,7 @@
   <div class="wrapper">
       <table><tr>
           <td><img width="75" src="/qip2023/images/tehran.png" valign="middle"></td>
-          <td style="padding-left:10px;"><a style="font-size: 15px;color: gray; font-weight: bold;" class="site-title" href="https://ece.ut.ac.ir" target="_blank">ECE School of Engineering, University of Tehran</a>
+          <td style="padding-left:10px;"><a style="font-size: 15px;color: gray; font-weight: bold;" class="site-title" href="https://ece.ut.ac.ir" target="_blank">ECE School of Engineering - University of Tehran</a>
           <br/>
           <span style="margin-top: -2px;margin-bottom: -5px;" class="site-title"><b>Quantum Information Processing</b></span>
           <br/>
