update qip course

--- a/qip2023/assignments/index.html
+++ b/qip2023/assignments/index.html
@@ -110,6 +110,10 @@
    </ul>   
    
    <ul>
+   <li style='font-weight: bold'>All course reports must be written in the <a href="/qip2023/static_files/homeworks/Template - Student.zip" target="_blank">Student Latex Template</a>.</li>
+   </ul>      
+   
+   <ul>
    <li style='font-weight: bold'>Please upload your answers in <a href="http://elearn.ut.ac.ir/" target="_blank">ELEARN</a>.</li>
    </ul>
 
