--- a/qip2023/index.html
+++ b/qip2023/index.html
@@ -170,14 +170,14 @@
 		<li class="no-p-margin">
             2022-10-02: Project 0 was released. Check [<a href="https://hpnl.ir/qip2023/projects" target="_blank">PROJECTS</a>].
             <p></p>
-
+		-->
         </li>
 		<li class="no-p-margin">
-            2022-09-20: Lectures 1 & 2 were released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
+            2023-10-01: Lecture 1 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
             <p></p>
 
         </li>
-		-->
+		
 		<li class="no-p-margin">
             2023-09-27: Lecture 0 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
             <p></p>
