--- a/alumni/index.html
+++ b/alumni/index.html
@@ -240,7 +240,12 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/ali_sharifi.jpg" class="image--cover">
                     <p>Ali Sharifi</p>
-                </div>						
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/ny.jpg" class="image--cover">
+                    <p>Nadia Yazdani</p>
+                </div>					
 
             </div>		
         </div>		
