--- a/people/index.html
+++ b/people/index.html
@@ -112,7 +112,7 @@
                 </div>
 				
                 <div class="image--cover-container">
-						<img src="/images/people/bh.jpg" class="image--cover">
+						<img src="/images/people/bahereh_hassanpour.jpg" class="image--cover">
                     <p>Seyedeh Bahereh Hassanpour</p>
                 </div>
                 
@@ -147,7 +147,7 @@
                 </div>			
 
                 <div class="image--cover-container">
-						<img src="/images/people/so.jpg" class="image--cover">
+						<img src="/images/people/sina_ojaghi.jpg" class="image--cover">
                     <p>Sina Ojaghi</p>
                 </div>							
  
@@ -157,12 +157,12 @@
                 </div>
 
                 <div class="image--cover-container">
-						<img src="/images/people/sz.jpg" class="image--cover">
+						<img src="/images/people/sajjad_zare.jpg" class="image--cover">
                     <p>Sajjad Zare</p>
                 </div>	
 
                 <div class="image--cover-container">
-						<img src="/images/people/nr.png" class="image--cover">
+						<img src="/images/people/negar_rezaei.png" class="image--cover">
                     <p>Negar Rezaei</p>
                 </div>					
 
@@ -206,7 +206,27 @@
                 <div class="image--cover-container">
 						<img src="/images/people/mina_faridi.jpg" class="image--cover">
                     <p>Mina Faridi</p>
-                </div>						
+                </div>
+
+                <div class="image--cover-container">
+						<img src="/images/people/hadi_foroughi.jpg" class="image--cover">
+                    <p>Mohammad Hadi Foroughi</p>
+                </div>		
+
+                <div class="image--cover-container">
+						<img src="/images/people/amir_amin.jpg" class="image--cover">
+                    <p>Amir Amin</p>
+                </div>		
+
+                <div class="image--cover-container">
+						<img src="/images/people/meysam_safari.png" class="image--cover">
+                    <p>Meysam Safari</p>
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/people/default.png" class="image--cover">
+                    <p>Mahan Osouli</p>
+                </div>					
 
             </div>		
         </div>		
