--- a/people/index.html
+++ b/people/index.html
@@ -224,7 +224,7 @@
                 </div>	
 
                 <div class="image--cover-container">
-						<img src="/images/people/default.png" class="image--cover">
+						<img src="/images/people/mahan_osouli.jpg" class="image--cover">
                     <p>Mahan Osouli</p>
                 </div>					
 
