--- a/people/index.html
+++ b/people/index.html
@@ -226,7 +226,22 @@
                 <div class="image--cover-container">
 						<img src="/images/people/mahan_osouli.jpg" class="image--cover">
                     <p>Mahan Osouli</p>
-                </div>					
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/people/default.png" class="image--cover">
+                    <p>Keyvan Rezazade</p>
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/people/default.png" class="image--cover">
+                    <p>Majid Baghi</p>
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/people/parsa_heidari.jpg" class="image--cover">
+                    <p>Parsa Heidari</p>
+                </div>									
 
             </div>		
         </div>		
