update qip note2-3-4

--- a/qip2023/index.html
+++ b/qip2023/index.html
@@ -155,22 +155,27 @@
 		<li class="no-p-margin">
             2022-11-06: Homework 2 was released. Check [<a href="https://hpnl.ir/qip2023/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
-
         </li>
+		-->		
 		<li class="no-p-margin">
-            2022-10-25: Homework 1 was released. Check [<a href="https://hpnl.ir/qip2023/assignments" target="_blank">ASSIGNMENTS</a>].
+            2023-10-15: Lecture 4 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>		
+		<li class="no-p-margin">
+            2023-10-08: Homework 1 was released. Check [<a href="https://hpnl.ir/qip2023/assignments" target="_blank">ASSIGNMENTS</a>].
             <p></p>
 
         </li>
 		<li class="no-p-margin">
-            2022-10-16: Lectures 3 & 4 were released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
+            2023-10-08: Lectures 2 & 3 were released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
             <p></p>
 
         </li>
 		<li class="no-p-margin">
-            2022-10-02: Project 0 was released. Check [<a href="https://hpnl.ir/qip2023/projects" target="_blank">PROJECTS</a>].
+            2023-10-07: Project 0 was released. Check [<a href="https://hpnl.ir/qip2023/projects" target="_blank">PROJECTS</a>].
             <p></p>
-		-->
+		
         </li>
 		<li class="no-p-margin">
             2023-10-01: Lecture 1 was released. Check [<a href="https://hpnl.ir/qip2023/lectures" target="_blank">LECTURES</a>].
